--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,12 @@ a:visited {
   text-decoration: none;
 }
 
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 a:hover {
   color: rgb(186, 25, 25);
   background-color: transparent;
@@ -52,12 +58,31 @@ a:hover {
   background-color: black;
   border: solid black 3px;
   border-radius: 7px;
+  width: 65%;
+  display: inline-block;
+  position: relative;
+  top: -30px;
+  left: 10px;
 }
 
-.github {
+#github {
   text-decoration: underline;
 }
 
 .github:hover {
   text-decoration: underline;
+}
+
+.argo {
+  width: 30%;
+  left: 3px;
+  border: solid black 4px;
+  border-radius: 8px;
+}
+
+.about {
+  background-color: black;
+  border: solid black 3px;
+  border-radius: 8px;
+  height: 600px;
 }
