--- a/sound_design.css
+++ b/sound_design.css
@@ -25,6 +25,12 @@ a:visited {
   text-decoration: none;
 }
 
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 a:hover {
   color: rgb(186, 25, 25);
   background-color: transparent;
@@ -58,8 +64,6 @@ a:hover {
   margin-left: auto;
   position: relative;
   top: -620px;
-  left: ;
-
 }
 
 .list {
