--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,3 +86,13 @@ a:hover {
   border-radius: 8px;
   height: 600px;
 }
+
+@media screen and (max-width: 500px) {
+
+  .left,
+  .main,
+  .right {
+    width: 100%;
+    /* The width is 100%, when the viewport is 800px or smaller */
+  }
+}
