--- a/sound_design.css
+++ b/sound_design.css
@@ -1,6 +1,6 @@
 .sub {
   display: grid;
-  grid-template-columns: 350px 350px 350px 350px;
+  grid-template-columns: 23em 23em 23em 23em;
   text-align: center;
   position: relative;
   bottom: -15px;
@@ -13,6 +13,7 @@
   border: 3px solid;
   background-color: rgb(53, 53, 53);
   border-radius: 8px;
+  width: 100%;
 }
 
 a {
@@ -105,7 +106,6 @@ a:hover {
   height: 1200px;
   border: 3px solid black;
   border-radius: 8px;
-
 }
 
 .vital {
@@ -113,7 +113,7 @@ a:hover {
   margin: auto;
   display: block;
   top: 50px;
-
+  width: 90%;
 }
 
 .osc {
