--- a/songs.css
+++ b/songs.css
@@ -1,3 +1,11 @@
+.directory {
+  height: 50px;
+  margin: auto;
+  border: 3px solid;
+  background-color: rgb(53, 53, 53);
+  border-radius: 8px;
+}
+
 .sub {
   display: grid;
   grid-template-columns: 350px 350px 350px 350px;
@@ -7,13 +15,7 @@
   color: aqua;
 }
 
-.directory {
-  height: 50px;
-  margin: auto;
-  border: 3px solid;
-  background-color: rgb(53, 53, 53);
-  border-radius: 8px;
-}
+
 
 a {
   text-decoration: none;
@@ -64,4 +66,24 @@ video {
 #soundcloud {
   color: #ff5500;
   text-decoration: underline;
+}
+
+@media screen and (max-width: 391px) {
+  .sub {
+    display: grid;
+    grid-template-columns: 90px 90px 90px 90px;
+    text-align: center;
+    position: relative;
+    bottom: -18px;
+    color: aqua;
+    font-size: 11px;
+    left: 25px;
+  }
+
+  .logo2 {
+    width: 40px;
+    top: 16.5px;
+    left: 15px;
+    position: absolute;
+  }
 }
